# logi-tune

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-please.yml
src/: main.rs
src/config/: mod.rs
src/hid/: device.rs  features.rs  mod.rs  monitor.rs  protocol.rs
src/input/: mod.rs
src/tui/: app.rs  mod.rs  ui.rs
src/tui/tabs/: buttons.rs  dpi.rs  mod.rs  scroll.rs  thumb_wheel.rs
systemd/: logi-tune.service
udev/: 99-mx-master.rules
