[package]
name = "logi-tune"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "logi-tune"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
nix = { version = "0.29", features = ["fs", "ioctl", "poll"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
